환경 세팅 + 크리덴셜 서비스 구현